# design-pattern

./: .clang-format  README.md
adaptor/: CMakelists.txt  adaptor.h  adaptor.md  client.cpp
builder/: builder.h  builder.md  client.cpp
chain_of_responsiblity/: chain_of_responsiblity.h  chain_of_responsiblity.md  client.cpp
decorator/: client.cpp  decorator.h  decorator.md
factory/: factory.md
factory/abstract_factory/: abstract_factory.h  client.cpp
factory/factory/: client.cpp  factory.h
factory/factory_method/: client.cpp
factory/simple_factory/: client.cpp  simple_factory.h
iterator/: client.cpp  iterator.h  iterator.md
observer/: client.cpp  observer.h  observer.md
prototype/: CMakelists.txt  client.cpp  prototype.h  prototype.md
singleton/: READEME.md  singleton.md
singleton/implementation/: hungry_new.h  hungry_static.h  lazy_lock.h  lazy_no_thread_safe.h  main  main.cpp  nocopyable.h
singleton/use_case/: CMakeLists.txt
singleton/use_case/opTest/include/: opTest1.h  opTest2.h
singleton/use_case/opTest/source/: opTest1.cpp  opTest2.cpp
singleton/use_case/testSuite/include/: testSuite.h
singleton/use_case/testSuite/source/: main.cpp  testSuite.cpp
singleton/use_case/transposeTest/: transposeTestResult.xlsx
singleton/use_case/transposeTest/include/: transposeTest.h
singleton/use_case/transposeTest/source/: transposeTest.cpp
state/: client.cpp  state.h  state.md
strategy/: client.cpp  strategy.h  strategy.md
